logs/api-error-0.log
You have triggered an unhandledRejection, you may have forgotten to catch a Promise rejection:
file:///home/websites/degenduel/routes/tokens.js:2
import db from '../config/pg-database.js';
       ^^
SyntaxError: The requested module '../config/pg-database.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:177:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:260:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:543:26)
2024-12-14 17:28:44 -05:00: ReferenceError: db is not defined
    at file:///home/websites/degenduel/routes/contests.js:17:22
    at Layer.handle [as handle_request] (/home/websites/degenduel/node_modules/express/lib/router/layer.js:95:5)
    at next (/home/websites/degenduel/node_modules/express/lib/router/route.js:149:13)
    at Route.dispatch (/home/websites/degenduel/node_modules/express/lib/router/route.js:119:3)
    at Layer.handle [as handle_request] (/home/websites/degenduel/node_modules/express/lib/router/layer.js:95:5)
    at /home/websites/degenduel/node_modules/express/lib/router/index.js:284:15
    at Function.process_params (/home/websites/degenduel/node_modules/express/lib/router/index.js:346:12)
    at next (/home/websites/degenduel/node_modules/express/lib/router/index.js:280:10)
    at Function.handle (/home/websites/degenduel/node_modules/express/lib/router/index.js:175:3)
    at router (/home/websites/degenduel/node_modules/express/lib/router/index.js:47:12)
2024-12-14 17:29:31 -05:00: ReferenceError: db is not defined
    at file:///home/websites/degenduel/routes/contests.js:17:22
    at Layer.handle [as handle_request] (/home/websites/degenduel/node_modules/express/lib/router/layer.js:95:5)
    at next (/home/websites/degenduel/node_modules/express/lib/router/route.js:149:13)
    at Route.dispatch (/home/websites/degenduel/node_modules/express/lib/router/route.js:119:3)
    at Layer.handle [as handle_request] (/home/websites/degenduel/node_modules/express/lib/router/layer.js:95:5)
    at /home/websites/degenduel/node_modules/express/lib/router/index.js:284:15
    at Function.process_params (/home/websites/degenduel/node_modules/express/lib/router/index.js:346:12)
    at next (/home/websites/degenduel/node_modules/express/lib/router/index.js:280:10)
    at Function.handle (/home/websites/degenduel/node_modules/express/lib/router/index.js:175:3)
    at router (/home/websites/degenduel/node_modules/express/lib/router/index.js:47:12)
